--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2027,29 +2027,6 @@
 %
 % \subsection{Token list conditionals}
 %
-% \begin{macro}[pTF]{\tl_if_blank:n, \tl_if_blank:V, \tl_if_blank:o}
-% \begin{macro}{\@@_if_blank_p:NNw}
-%   \TeX{} skips spaces when reading a non-delimited arguments. Thus,
-%   a \meta{token list} is blank if and only if \cs{use_none:n}
-%   \meta{token list} |?| is empty after one expansion.  The auxiliary
-%   \cs{@@_if_empty_if:o} is a fast emptyness test, converting its
-%   argument to a string (after one expansion) and using the test
-%   \cs{if_meaning:w} \cs{q_@@_nil} |...| \cs{q_@@_nil}.
-%    \begin{macrocode}
-\prg_new_conditional:Npnn \tl_if_blank:n #1 { p , T , F , TF }
-  {
-    \@@_if_empty_if:o { \use_none:n #1 ? }
-      \prg_return_true:
-    \else:
-      \prg_return_false:
-    \fi:
-  }
-\prg_generate_conditional_variant:Nnn \tl_if_blank:n
-  { e , V , o } { p , T , F , TF }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
 % \begin{macro}[pTF]{\tl_if_empty:N, \tl_if_empty:c}
 %    These functions check whether the token list in the argument is
 %    empty and execute the proper code from their argument(s).
@@ -2122,6 +2099,30 @@
       \prg_return_false:
     \fi:
  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[pTF]{\tl_if_blank:n, \tl_if_blank:V, \tl_if_blank:o}
+% \begin{macro}{\@@_if_blank_p:NNw}
+%   \TeX{} skips spaces when reading a non-delimited arguments. Thus,
+%   a \meta{token list} is blank if and only if \cs{use_none:n}
+%   \meta{token list} |?| is empty after one expansion.  The auxiliary
+%   \cs{@@_if_empty_if:o} is a fast emptyness test, converting its
+%   argument to a string (after one expansion) and using the test
+%   \cs{if:w} \cs{scan_stop:} |...| \cs{scan_stop:}.
+%    \begin{macrocode}
+\exp_args:Nno \use:n
+  { \prg_new_conditional:Npnn \tl_if_blank:n #1 { p , T , F , TF } }
+  {
+    \@@_if_empty_if:o { \use_none:n #1 ? }
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
+\prg_generate_conditional_variant:Nnn \tl_if_blank:n
+  { e , V , o } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
