Tidy up 'spot' usage in l3color

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -59,7 +59,7 @@
 % or print. Parameter-based models can describe a very large number of unique
 % colors, and have a varying number of \emph{axes} which define a color
 % space. In contrast, various proprietary models are available which define
-% \emph{spot} colors.
+% \emph{spot} colors (more formally separations).
 %
 % Core models are used to pass color information to output; these are
 % \enquote{native} to \pkg{l3color}. Core models use real numbers in the range
@@ -71,9 +71,6 @@
 %     the components
 %   \item \texttt{cmyk} Cyan-magenta-yellow-black color, with four axes, one for
 %     each of the components
-%   \item \texttt{spot} Spot color, with one value, the name of the color
-%     (see \url{https://helpx.adobe.com/indesign/using/spot-process-colors.html}
-%     for details of the use of spot colors in print)
 % \end{itemize}
 % There are also interface models: these are convenient for users but have
 % to be manipulated before storing/passing to the backend. Interface models
@@ -93,9 +90,10 @@
 % \end{itemize}
 % All interface models are internally stored as |rgb|.
 % 
-% Additional models may be created to allow mixing of spot colors
+% Additional models may be created to allow mixing of separation colors
 % with each other or with those from other models. See
-% Section~\ref{l3color:sec:new-models} for more detail of spot color support.
+% Section~\ref{l3color:sec:new-models} for more detail of color support
+% for additional models.
 %
 % When color is selected by model, the \meta{values} given are specified as
 % a comma-separated list. The length of the list will therefore be determined
@@ -822,11 +820,10 @@
 % \begin{macro}[EXP]
 %   {
 %     \@@_parse_model_gray:w, \@@_parse_model_rgb:w,
-%     \@@_parse_model_cmyk:w, \@@_parse_model_spot:w
+%     \@@_parse_model_cmyk:w
 %   }
 % \begin{macro}[EXP]{\@@_parse_number:n}
 % \begin{macro}[EXP]{\@@_parse_number:w}
-% \begin{macro}[EXP]{\@@_parse_spot_aux:w}
 %   Turn the input into internal form, also tidying up the number quickly.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_model_gray:w #1 , #2 \s_@@_stop
@@ -850,19 +847,11 @@
       \@@_parse_number:n {#4}
     }
   }
-\cs_new:Npn \@@_parse_model_spot:w #1 , #2 \s_@@_stop
-  {
-    { spot }
-    { \@@_parse_spot_aux:w #1 ! 100 ! \s_@@_stop }
-  }
-\cs_new:Npn \@@_parse_spot_aux:w #1 ! #2 ! #3 \s_@@_stop
-  { #1 ~ \fp_eval:n { #2 / 100 } }
 \cs_new:Npn \@@_parse_number:n #1
   {  \@@_parse_number:w #1 . 0 . \s_@@_stop }
 \cs_new:Npn \@@_parse_number:w #1 . #2 . #3 \s_@@_stop
   { \tl_if_blank:nTF {#1} { 0 } {#1} . #2 }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
