--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -92,6 +92,10 @@
 % \end{itemize}
 % All interface models are internally stored as |rgb|.
 % 
+% To allow parsing of data from \pkg{xcolor}, any leading model up the first
+% \texttt{:} will be discarded; the approach of selecting an internal form
+% for data is \emph{not} used in \pkg{l3color}.
+% 
 % Additional models may be created to allow mixing of separation colors
 % with each other or with those from other models. See
 % Section~\ref{l3color:sec:new-models} for more detail of color support
@@ -1119,6 +1123,7 @@
 % \begin{macro}{\@@_set:nn}
 % \begin{macro}{\@@_set:nnw}
 % \begin{macro}{\color_set:nnn}
+% \begin{macro}{\@@_set_colon:nnw}
 % \begin{macro}{\@@_set_loop:nw}
 % \begin{macro}{\color_set_eq:nn}
 %   Defining named colors means working through the model list and saving
@@ -1181,14 +1186,27 @@
           }
       }
   }
-\cs_new_protected:Npn \color_set:nnn #1#2#3
+\cs_new_protected:Npx \color_set:nnn #1#2#3
   {
-    \str_if_eq:nnF {#1} { . }
+    \exp_not:N \str_if_eq:nnF {#1} { . }
       {
         \tl_clear_new:c { l_@@_named_ #1 _tl }
         \prop_clear_new:c { l_@@_named_ #1 _prop }
-        \@@_set_loop:nw {#1} #2 / / \s_@@_mark #3 / / \s_@@_stop
+        \exp_not:N \@@_set_colon:nnw {#1} {#3}
+          #2 \c_colon_str \c_colon_str \exp_not:N \s_@@_stop
       }
+  }
+\use:x
+  {
+    \cs_new_protected:Npn \exp_not:N \@@_set_colon:nnw
+      ##1##2 ##3 \c_colon_str ##4 \c_colon_str
+      ##5 \exp_not:N \s_@@_stop
+  }
+  {
+    \tl_if_blank:nTF {#4}
+      { \@@_set_loop:nw {#1} #3 }
+      { \@@_set_loop:nw {#1} #4 }
+        / / \s_@@_mark #2 / / \s_@@_stop
   }
 \cs_new_protected:Npn \@@_set_loop:nw
   #1#2 / #3 \s_@@_mark #4 / #5 \s_@@_stop
@@ -1227,6 +1245,7 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
