--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -91,6 +91,8 @@
 %     single six-digit hexadecimal number
 %   \item \texttt{RGB} Red-green-blue color, with three axes, one for each of
 %     the components, values as integers from $0$ to $255$
+%   \item \texttt{wave} Light wavelength, a real number in the range
+%     $380$ to $780$ (nanometres)
 % \end{itemize}
 % All interface models are internally stored as |rgb|.
 % 
@@ -868,6 +870,8 @@
 %     \@@_parse_model_Hsb:w, \@@_parse_model_HSB:w,
 %     \@@_parse_model_HTML:w, \@@_parse_model_RGB:w
 %   }
+% \begin{macro}[EXP]{\@@_parse_model_wave:nn}
+% \begin{macro}[EXP]{\@@_parse_model_wave:nnnn}
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_model_Gray:w #1 , #2 \s_@@_stop
   { { gray } { \fp_eval:n { #1 / 15 } } }
@@ -948,6 +952,78 @@
     }
   }
 %    \end{macrocode}
+%  Following the description in the \pkg{xcolor} manual, we use the conversion to
+%  \texttt{rgb} with $\gamma = 1.0$. We do \emph{not} go via \texttt{hsb} as for
+%  us that is not a core model. The first step is to calculate $f$, allowing for
+%  the color being out-of-visible range and so black.
+%    \begin{macrocode}
+\cs_new:Npn \@@_parse_model_wave:w #1 , #2 \s_@@_stop
+  {
+    { rgb }
+    {
+      \bool_lazy_or:nnTF
+        { \fp_compare_p:nNn {#1} < { 380 } }
+        { \fp_compare_p:nNn {#1} > { 780 } }
+        { 0 , 0 , 0 }
+        {
+          \exp_args:Ne \@@_parse_model_wave:nn
+            {
+              \fp_compare:nNnTF {#1} < { 420 }
+                { \fp_eval:n { 0.3 + 0.7 * (#1 - 380) / 40 } }
+                {
+                  \fp_compare:nNnTF {#1} > { 700 }
+                    { \fp_eval:n { 0.3 + 0.7 * (780 - #1) / 80 } }
+                    { 1 }
+                }
+            }
+            {#1}
+        }
+    }
+  }
+\cs_new:Npn \@@_parse_model_wave:nn #1#2
+  {
+    \fp_compare:nNnTF {#2} < { 440 }
+      {
+        \@@_parse_model_wave:nnnn {#1} { ( 440 - #2 ) / 60 } { 0 } { 1 }
+      }
+      {
+        \fp_compare:nNnTF {#2} < { 490 }
+          {
+            \@@_parse_model_wave:nnnn {#1} { 0 } { ( #2 - 440 ) / 50 }  { 1 }
+          }
+          {
+            \fp_compare:nNnTF {#2} < { 510 }
+              {
+                \@@_parse_model_wave:nnnn {#1} { 0 } { 1 }
+                  { ( 510 - #2 ) / 20 }
+              }
+              {
+                \fp_compare:nNnTF {#2} < { 580 }
+                  {
+                    \@@_parse_model_wave:nnnn {#1}
+                      { ( #2 - 510 ) / 70 } { 1 } { 0 }
+                  }
+                  {
+                    \fp_compare:nNnTF {#2} < { 645 }
+                      {
+                        \@@_parse_model_wave:nnnn {#1} { 1 }
+                          { ( 645 - #2 ) / 65 } { 0 }
+                      }
+                      { \@@_parse_model_wave:nnnn {#1} { 1 } { 0 } { 0 } }
+                  }
+              }
+          }
+      }
+  }
+\cs_new:Npn \@@_parse_model_wave:nnnn #1#2#3#4
+  {
+    \fp_eval:n { #1 * #2 } ,
+    \fp_eval:n { #1 * #3 } ,
+    \fp_eval:n { #1 * #4 }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Selecting colors (and color models)}
