Add missing mark-up

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -869,6 +869,18 @@
 %     \@@_parse_model_Hsb:w, \@@_parse_model_HSB:w,
 %     \@@_parse_model_HTML:w, \@@_parse_model_RGB:w
 %   }
+% \begin{macro}[EXP]{\@@_parse_model_hsb:nnn, \@@_parse_model_hsb_aux:nnn}
+% \begin{macro}[EXP]{\@@_parse_model_hsb:nnnn}
+% \begin{macro}[EXP]{\@@_parse_model_hsb:nnnnn}
+% \begin{macro}[EXP]
+%   {
+%     \@@_parse_model_hsb_0:nnnn ,
+%     \@@_parse_model_hsb_1:nnnn ,
+%     \@@_parse_model_hsb_2:nnnn ,
+%     \@@_parse_model_hsb_3:nnnn ,
+%     \@@_parse_model_hsb_4:nnnn ,
+%     \@@_parse_model_hsb_5:nnnn
+%   }
 % \begin{macro}[EXP]{\@@_parse_model_wave:nn}
 % \begin{macro}[EXP]{\@@_parse_model_wave:nnnn}
 %    \begin{macrocode}
@@ -1021,6 +1033,10 @@
     \fp_eval:n { #1 * #4 }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
