use __kernel_exp_not:w \exp_after:wN instead of \exp_not:o

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1350,9 +1350,21 @@
 %   \cs{scan_stop:} would lead to problems later on.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_concat:NNN #1#2#3
-  { \tl_set:Nx #1 { \exp_not:o {#2} \exp_not:o {#3} } }
+  {
+    \tl_set:Nx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#2}
+        \__kernel_exp_not:w \exp_after:wN {#3}
+      }
+  }
 \cs_new_protected:Npn \tl_gconcat:NNN #1#2#3
-  { \tl_gset:Nx #1 { \exp_not:o {#2} \exp_not:o {#3} } }
+  {
+    \tl_gset:Nx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#2}
+        \__kernel_exp_not:w \exp_after:wN {#3}
+      }
+  }
 \cs_generate_variant:Nn \tl_concat:NNN  { ccc }
 \cs_generate_variant:Nn \tl_gconcat:NNN { ccc }
 %    \end{macrocode}
@@ -1421,13 +1433,13 @@
 \cs_new_protected:Npn \tl_set:Nn #1#2
   { \cs_set_nopar:Npx #1 { \exp_not:n {#2} } }
 \cs_new_protected:Npn \tl_set:No #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o {#2} } }
+  { \cs_set_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
 \cs_new_protected:Npn \tl_set:Nx #1#2
   { \cs_set_nopar:Npx #1 {#2} }
 \cs_new_protected:Npn \tl_gset:Nn #1#2
   { \cs_gset_nopar:Npx #1 { \exp_not:n {#2} } }
 \cs_new_protected:Npn \tl_gset:No #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o {#2} } }
+  { \cs_gset_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
 \cs_new_protected:Npn \tl_gset:Nx #1#2
   { \cs_gset_nopar:Npx #1 {#2} }
 \cs_generate_variant:Nn \tl_set:Nn  {         NV , Nv , Nf }
@@ -1453,21 +1465,45 @@
 % Adding to the left is done directly to gain a little performance.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_put_left:Nn #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:n {#2} \exp_not:o #1 } }
+  {
+    \cs_set_nopar:Npx #1
+      { \exp_not:n {#2} \__kernel_exp_not:w \exp_after:wN {#1} }
+  }
 \cs_new_protected:Npn \tl_put_left:NV #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:V #2 \exp_not:o #1 } }
+  {
+    \cs_set_nopar:Npx #1
+      { \exp_not:V #2 \__kernel_exp_not:w \exp_after:wN {#1} }
+  }
 \cs_new_protected:Npn \tl_put_left:No #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o {#2} \exp_not:o #1 } }
+  {
+    \cs_set_nopar:Npx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#2}
+        \__kernel_exp_not:w \exp_after:wN {#1}
+      }
+  }
 \cs_new_protected:Npn \tl_put_left:Nx #1#2
-  { \cs_set_nopar:Npx #1 { #2 \exp_not:o #1 } }
+  { \cs_set_nopar:Npx #1 { #2 \__kernel_exp_not:w \exp_after:wN {#1} } }
 \cs_new_protected:Npn \tl_gput_left:Nn #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:n {#2} \exp_not:o #1 } }
+  {
+    \cs_gset_nopar:Npx #1
+      { \exp_not:n {#2} \__kernel_exp_not:w \exp_after:wN {#1} }
+  }
 \cs_new_protected:Npn \tl_gput_left:NV #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:V #2 \exp_not:o #1 } }
+  {
+    \cs_gset_nopar:Npx #1
+      { \exp_not:V #2 \__kernel_exp_not:w \exp_after:wN {#1} }
+  }
 \cs_new_protected:Npn \tl_gput_left:No #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o {#2} \exp_not:o #1 } }
+  {
+    \cs_gset_nopar:Npx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#2}
+        \__kernel_exp_not:w \exp_after:wN {#1}
+      }
+  }
 \cs_new_protected:Npn \tl_gput_left:Nx #1#2
-  { \cs_gset_nopar:Npx #1 { #2 \exp_not:o {#1} } }
+  { \cs_gset_nopar:Npx #1 { #2 \__kernel_exp_not:w \exp_after:wN {#1} } }
 \cs_generate_variant:Nn \tl_put_left:Nn  { c }
 \cs_generate_variant:Nn \tl_put_left:NV  { c }
 \cs_generate_variant:Nn \tl_put_left:No  { c }
@@ -1495,21 +1531,39 @@
 % The same on the right.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_put_right:Nn #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o { #1 #2 } } }
+  { \cs_set_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN { #1 #2 } } }
 \cs_new_protected:Npn \tl_put_right:NV #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o #1 \exp_not:V #2 } }
+  {
+    \cs_set_nopar:Npx #1
+      { \__kernel_exp_not:w \exp_after:wN {#1} \exp_not:V #2 }
+  }
 \cs_new_protected:Npn \tl_put_right:No #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o #1 \exp_not:o {#2} } }
+  {
+    \cs_set_nopar:Npx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#1}
+        \__kernel_exp_not:w \exp_after:wN {#2}
+      }
+  }
 \cs_new_protected:Npn \tl_put_right:Nx #1#2
-  { \cs_set_nopar:Npx #1 { \exp_not:o #1 #2 } }
+  { \cs_set_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#1} #2 } }
 \cs_new_protected:Npn \tl_gput_right:Nn #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o { #1 #2 } } }
+  { \cs_gset_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN { #1 #2 } } }
 \cs_new_protected:Npn \tl_gput_right:NV #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o #1 \exp_not:V #2 } }
+  {
+    \cs_gset_nopar:Npx #1
+      { \__kernel_exp_not:w \exp_after:wN {#1} \exp_not:V #2 }
+  }
 \cs_new_protected:Npn \tl_gput_right:No #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o #1 \exp_not:o {#2} } }
+  {
+    \cs_gset_nopar:Npx #1
+      {
+        \__kernel_exp_not:w \exp_after:wN {#1}
+        \__kernel_exp_not:w \exp_after:wN {#2}
+      }
+  }
 \cs_new_protected:Npn \tl_gput_right:Nx #1#2
-  { \cs_gset_nopar:Npx #1 { \exp_not:o #1 #2 } }
+  { \cs_gset_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#1} #2 } }
 \cs_generate_variant:Nn \tl_put_right:Nn  { c }
 \cs_generate_variant:Nn \tl_put_right:NV  { c }
 \cs_generate_variant:Nn \tl_put_right:No  { c }
@@ -1969,7 +2023,7 @@
   {
     \group_align_safe_begin:
     \cs_set:Npn \@@_replace_wrap:w ##1 #1 ##2
-      { \exp_not:o { \use_none:nn ##1 } ##2 }
+      { \__kernel_exp_not:w \exp_after:wN { \use_none:nn ##1 } ##2 }
     \cs_set:Npx \@@_replace_next:w ##1 #5
       {
         \exp_not:N \@@_replace_wrap:w ##1
@@ -2626,7 +2680,7 @@
       \s_@@_stop { {#1} #5 }
   }
 \cs_new:Npn \@@_reverse_items:wn #1 \s_@@_stop #2
-  { \exp_not:o { \use_none:nn #2 } }
+  { \__kernel_exp_not:w \exp_after:wN { \use_none:nn #2 } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3398,7 +3452,10 @@
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
     \__kernel_chk_defined:NT #2
-      { \exp_args:Nx #1 { \token_to_str:N #2 = \exp_not:o {#2} } }
+      {
+        \exp_args:Ne #1
+          { \token_to_str:N #2 = \__kernel_exp_not:w \exp_after:wN {#2} }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
