--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3222,10 +3222,9 @@
 %   test yields \texttt{false}.  The work is done within braces (with an
 %   |\if_false: { \fi: ... }| construction) both to hide potential
 %   alignment tab characters from \TeX{} in a table, and to allow for
-%   removing what remains of the token list after its first space.  The
-%   \cs{exp:w} and \cs{exp_end:} ensure that the result of a
-%   single step of expansion directly yields a balanced token list (no
-%   trailing closing brace).
+%   removing what remains of the token list after its first space.  The use of
+%   \cs{if:w} ensures that the result of a single step of expansion directly
+%   yields a balanced token list (no trailing closing brace).
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_head_is_space:n #1 { p , T , F , TF }
   {
