--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -334,7 +334,7 @@
 %   \meta{tl}.
 % \end{function}
 %
-% \begin{function}{\color_export:nnN}
+% \begin{function}{\color_export:nnnN}
 %   \begin{syntax}
 %     \cs{color_export:nnnN} \Arg{model} \Arg{value(s)} \Arg{format} \Arg{tl}
 %   \end{syntax}
