Emulate \tex_strcmp:D in LuaTeX

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -3095,32 +3095,11 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_str_cmp:nn}
-% \begin{macro}[EXP]{\@@_str_escape:n}
 %   As we are doing a fixed-length \enquote{big} integer comparison, it
 %   is easiest to use the low-level behavior  of string comparisons.
 %    \begin{macrocode}
-\cs_new:Npn \@@_str_cmp:nn #1#2 { \tex_strcmp:D {#1} {#2} }
-\sys_if_engine_luatex:T
-  {
-    \cs_set:Npn \@@_str_cmp:nn #1#2
-      {
-        \lua_now:e
-          {
-            l3kernel.strcmp
-              (
-                " \@@_str_escape:n {#1}",
-                " \@@_str_escape:n {#2}"
-              )
-          }
-      }
-   \cs_new:Npn \@@_str_escape:n #1
-     {
-       \lua_escape:e
-         { \__kernel_tl_to_str:w \use:e { {#1} } }
-     }
-  }
+\cs_new_eq:NN \@@_str_cmp:nn \tex_strcmp:D
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[EXP, pTF]{\file_compare_timestamp:nNn}
