--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -125,7 +125,7 @@
 %   |l3kernel| table.
 % \end{function}
 %
-% \begin{function}{l3kernel.charcat}
+% \begin{function}[dep]{l3kernel.charcat}
 %   \begin{syntax}
 %     |l3kernel.charcat(|\meta{charcode}, \meta{catcode}|)|
 %   \end{syntax}
@@ -201,7 +201,7 @@
 %   Executes the \meta{cmd} and prints to the log as for \pdfTeX{}.
 % \end{function}
 %
-% \begin{function}{l3kernel.strcmp}
+% \begin{function}[dep]{l3kernel.strcmp}
 %   \begin{syntax}
 %     |l3kernel.strcmp(|\meta{str one}, \meta{str two}|)|
 %   \end{syntax}
@@ -356,8 +356,19 @@ local cprint     = tex.cprint
 local write      = tex.write
 local write_nl   = texio.write_nl
 local scan_int   = token.scan_int or token.scan_integer
+local scan_string= token.scan_string
 local utf8_char  = utf8.char
 %    \end{macrocode}
+%
+%    \begin{macrocode}
+local function deprecated(table, name, func)
+  table[name] = function(...)
+    write_nl("Calling deprecated Lua function %s", name)
+    table[name] = func
+    return func(...)
+  end
+end
+%    \end{macrocode
 %
 %   Deal with Con\TeX{}t: doesn't use |kpse| library.
 %    \begin{macrocode}
@@ -376,15 +387,14 @@ end
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{l3kernel.charcat}
+% \begin{macro}[dep]{l3kernel.charcat}
 %   Creating arbitrary chars using |tex.cprint|.
 %   The alternative approach using |token.put_next(token.create(...))|
 %   would be about 10\% slower.
 %    \begin{macrocode}
-local function charcat(charcode, catcode)
+deprecated(l3kernel, 'charcat', function(charcode, catcode)
   cprint(catcode, utf8_char(charcode))
-end
-l3kernel.charcat = charcat
+end)
 %    \end{macrocode}
 % \end{macro}
 %
@@ -522,11 +532,11 @@ l3kernel.filesize = filesize
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{l3kernel.strcmp}
+% \begin{macro}[dep]{l3kernel.strcmp}
 %   String comparison which gives the same results as \pdfTeX{}'s
 %   \tn{pdfstrcmp}, although the ordering should likely not be relied upon!
 %    \begin{macrocode}
-function l3kernel.strcmp(A, B)
+deprecated(l3kernel, "strcmp", function (A, B)
   if A == B then
     write("0")
   elseif A < B then
@@ -534,14 +544,14 @@ function l3kernel.strcmp(A, B)
   else
     write("1")
   end
-end
+end)
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{l3kernel.shellescape}
 %   Replicating the \pdfTeX{} log interaction for shell escape.
 %    \begin{macrocode}
-local function shellescape(cmd)
+function l3kernel.shellescape(cmd)
   local status,msg = os_exec(cmd)
   if status == nil then
     write_nl("log","runsystem(" .. cmd .. ")...(" .. msg .. ")\n")
@@ -551,7 +561,6 @@ local function shellescape(cmd)
     write_nl("log","runsystem(" .. cmd .. ")...failed " .. (msg or "") .. "\n")
   end
 end
-l3kernel.shellescape = shellescape
 %    \end{macrocode}
 % \end{macro}
 %
@@ -565,6 +574,7 @@ local luacmd do
   local set_lua = token.set_lua
   local undefined_cs = token.command_id'undefined_cs'
 
+  if not context and not luatexbase then require'ltluatex' end
   if luatexbase then
     local new_luafunction = luatexbase.new_luafunction
     local functions = lua.get_functions_table()
