Implement file pseudo-primitives

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2636,18 +2636,9 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_size:n}
-%   A copy of the primitive where it's available, or the \LuaTeX{}
-%   equivalent if relevant.
+%   A copy of the primitive where it's available.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_size:n \tex_filesize:D
-\sys_if_engine_luatex:T
-  {
-    \cs_gset:Npn \@@_size:n #1
-      {
-        \lua_now:e
-          { l3kernel.filesize ( " \lua_escape:e {#1} " ) }
-      }
-  }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2753,9 +2744,7 @@
 %    \end{macrocode}
 %   Deal with the fact that the primitive might not be available.
 %    \begin{macrocode}
-\bool_lazy_or:nnF
-  { \cs_if_exist_p:N \tex_filesize:D }
-  { \sys_if_engine_luatex_p: }
+\cs_if_exist:NF \tex_filesize:D
   {
     \cs_gset:Npn \file_full_name:n #1
       {
@@ -2817,9 +2806,7 @@
 %   existence of the file with |.tex| extension in that directory, and
 %   if it exists we include the |.tex| extension in the result.
 %    \begin{macrocode}
-\bool_lazy_or:nnF
-  { \cs_if_exist_p:N \tex_filesize:D }
-  { \sys_if_engine_luatex_p: }
+\cs_if_exist:NF \tex_filesize:D
   {
     \prg_set_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
       {
@@ -2882,8 +2869,6 @@
 %   As the MD5 function has a slightly different syntax from the other commands,
 %   there is a little cleaning up to do.
 %    \begin{macrocode}
-\cs_new:Npn \file_mdfive_hash:n #1
-  { \@@_details:nn {#1} { mdfivesum } }
 \cs_new:Npn \file_size:n #1
   { \@@_details:nn {#1} { size } }
 \cs_new:Npn \file_timestamp:n #1
@@ -2898,20 +2883,10 @@
     \tl_if_blank:nF {#1}
       { \use:c { tex_file #2 :D } {#1} }
   }
-\sys_if_engine_luatex:TF
-  {
-    \cs_gset:Npn \@@_details_aux:nn #1#2
-      {
-        \lua_now:e
-          { l3kernel.file#2 ( " \lua_escape:e { #1 } " ) }
-      }
-  }
-  {
-    \cs_gset:Npn \file_mdfive_hash:n #1
-      { \exp_args:Ne \@@_mdfive_hash:n { \file_full_name:n {#1} } }
-    \cs_new:Npn \@@_mdfive_hash:n #1
-      { \tex_mdfivesum:D file {#1} }
-  }
+\cs_new:Npn \file_mdfive_hash:n #1
+  { \exp_args:Ne \@@_mdfive_hash:n { \file_full_name:n {#1} } }
+\cs_new:Npn \@@_mdfive_hash:n #1
+  { \tex_mdfivesum:D file {#1} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -2973,35 +2948,12 @@
       length ~ \int_eval:n { #1 - #2 + 1 }
       {#3}
   }
-\sys_if_engine_luatex:T
-  {
-    \cs_gset:Npn \@@_hex_dump_auxiv:nnn #1#2#3
-      {
-        \lua_now:e
-          {
-            l3kernel.filedump
-              (
-                " \lua_escape:e {#3} " ,
-                \int_eval:n { #2 - 1 } ,
-                \int_eval:n { #1 - #2 + 1 }
-              )
-          }
-      }
-  }
 \cs_new:Npn \file_hex_dump:n #1
   { \exp_args:Ne \@@_hex_dump:n { \file_full_name:n {#1} } }
 \cs_new:Npn \@@_hex_dump:n #1
   {
     \tl_if_blank:nF {#1}
       { \tex_filedump:D length \tex_filesize:D {#1} {#1} }
-  }
-\sys_if_engine_luatex:T
-  {
-    \cs_gset:Npn \@@_hex_dump:n #1
-      {
-        \lua_now:e
-          { l3kernel.filedump ( " \lua_escape:e { #1 } " ) }
-      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3048,9 +3000,7 @@
 %   Where the primitive is not available, issue an error: this is a little
 %   more conservative than absolutely needed, but does work.
 %    \begin{macrocode}
-\bool_lazy_or:nnF
-  { \cs_if_exist_p:N \tex_filesize:D }
-  { \sys_if_engine_luatex_p: }
+\cs_if_exist:NF \tex_filesize:D
   {
     \cs_set_protected:Npn \@@_get_details:nnN #1#2#3
        {
@@ -3148,15 +3098,7 @@
           }
       }
   }
-\sys_if_engine_luatex:TF
-  {
-    \cs_new:Npn \@@_timestamp:n #1
-      {
-        \lua_now:e
-          { l3kernel.filemoddate ( " \lua_escape:e {#1} " ) }
-      }
-  }
-  { \cs_new_eq:NN \@@_timestamp:n \tex_filemoddate:D }
+\cs_new_eq:NN \@@_timestamp:n \tex_filemoddate:D
 \cs_if_exist:NF \@@_timestamp:n
   {
     \prg_set_conditional:Npnn \file_compare_timestamp:nNn #1#2#3
