--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -125,13 +125,13 @@
 %   |ltxutils| table.
 % \end{function}
 %
-% \begin{function}[dep]{l3kernel}
-%   For compatibility reasons, there are also some interfaces provided in
-%   the |l3kernel| table. These do not return their result as Lua values but
+% \begin{function}[deprecated = 2021-12-31]{l3kernel}
+%   For compatibility reasons, there are also some deprecated interfaces provided
+%   in the |l3kernel| table. These do not return their result as Lua values but
 %   instead print them to \TeX.
 % \end{function}
 %
-% \begin{function}[dep]{l3kernel.charcat}
+% \begin{function}{l3kernel.charcat}
 %   \begin{syntax}
 %     |l3kernel.charcat(|\meta{charcode}, \meta{catcode}|)|
 %   \end{syntax}
@@ -149,12 +149,9 @@
 %   for user input.
 % \end{function}
 %
-% \begin{function}{ltxutils.filedump}
-% \begin{function}[dep]{l3kernel.filedump}
+% \begin{function}{ltxutils.filedump, l3kernel.filedump}
 %   \begin{syntax}
-%     \meta{dump}| = ltxutils.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)|
-%   \end{syntax}
-%   \begin{syntax}
+%     \meta{dump}| = ltxutils.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)| \\
 %     |l3kernel.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)|
 %   \end{syntax}
 %   Returns the uppercase hexadecimal representation of the content of the
@@ -164,12 +161,9 @@
 %   is read starting at the \meta{offset}.
 % \end{function}
 %
-% \begin{function}{ltxutils.filemd5sum}
-% \begin{function}[dep]{l3kernel.filemdfivesum}
+% \begin{function}{ltxutils.filemd5sum, l3kernel.filemdfivesum}
 %   \begin{syntax}
-%     \meta{hash}| = ltxutils.filemd5sum(|\meta{file}|)|
-%   \end{syntax}
-%   \begin{syntax}
+%     \meta{hash}| = ltxutils.filemd5sum(|\meta{file}|)| \\
 %     |l3kernel.filemdfivesum(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the MD5 sum of the file contents read as bytes; note that
@@ -177,14 +171,10 @@
 %   in contrast to normal \TeX{} behaviour. If the \meta{file} is not found,
 %   nothing is returned with \emph{no error raised}.
 % \end{function}
-% \end{function}
 %
-% \begin{function}{ltxutils.filemoddate}
-% \begin{function}[dep]{l3kernel.filemoddate}
+% \begin{function}{ltxutils.filemoddate, l3kernel.filemoddate}
 %   \begin{syntax}
-%     \meta{date}| = ltxutils.filemoddate(|\meta{file}|)|
-%   \end{syntax}
-%   \begin{syntax}
+%     \meta{date}| = ltxutils.filemoddate(|\meta{file}|)| \\
 %     |l3kernel.filemoddate(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the date/time of last modification of the \meta{file} in the
@@ -198,17 +188,13 @@
 %   not found, nothing is returned with \emph{no error raised}.
 % \end{function}
 %
-% \begin{function}{ltxutils.filesize}
-% \begin{function}[dep]{l3kernel.filesize}
+% \begin{function}{ltxutils.filesize, l3kernel.filesize}
 %   \begin{syntax}
-%     |size = ltxutils.filesize(|\meta{file}|)|
-%   \end{syntax}
-%   \begin{syntax}
+%     |size = ltxutils.filesize(|\meta{file}|)| \\
 %     |l3kernel.filesize(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the size of the \meta{file} in bytes. If the \meta{file} is not
 %   found, nothing is returned with \emph{no error raised}.
-% \end{function}
 % \end{function}
 %
 % \begin{function}{l3kernel.resettimer}
@@ -225,7 +211,7 @@
 %   Executes the \meta{cmd} and prints to the log as for \pdfTeX{}.
 % \end{function}
 %
-% \begin{function}[dep]{l3kernel.strcmp}
+% \begin{function}{l3kernel.strcmp}
 %   \begin{syntax}
 %     |l3kernel.strcmp(|\meta{str one}, \meta{str two}|)|
 %   \end{syntax}
@@ -414,7 +400,7 @@ end
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[dep]{l3kernel.charcat}
+% \begin{macro}{l3kernel.charcat}
 %   Creating arbitrary chars using |tex.cprint|.
 %   The alternative approach using |token.put_next(token.create(...))|
 %   would be about 10\% slower.
@@ -446,7 +432,7 @@ l3kernel.resettimer = resettimer
 % \end{macro}
 %
 % \begin{macro}{ltxutils.filedump}
-% \begin{macro}[dep]{l3kernel.filedump}
+% \begin{macro}{l3kernel.filedump}
 %   Similar comments here to the next function: read the file in binary mode
 %   to avoid any line-end weirdness.
 %    \begin{macrocode}
@@ -489,7 +475,7 @@ end
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{ltxutils.filemd5sum}
-% \begin{macro}[dep]{l3kernel.filemdfivesum}
+% \begin{macro}{l3kernel.filemdfivesum}
 %   Read an entire file and hash it: the hash function itself is a built-in.
 %   As Lua is byte-based there is no work needed here in terms of UTF-8
 %   (see \pkg{pdftexcmds} and how it handles strings that have passed through
@@ -513,8 +499,9 @@ deprecated(l3kernel, "filemdfivesum", function(name)
 end)
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}[dep]{l3kernel.filemoddate}
+% \begin{macro}{l3kernel.filemoddate}
 %   See procedure \texttt{makepdftime} in \texttt{utils.c} of
 %   \pdfTeX{}.
 %    \begin{macrocode}
@@ -573,7 +560,7 @@ end)
 % \end{macro}
 %
 % \begin{macro}{ltxutils.filesize}
-% \begin{macro}[dep]{l3kernel.filesize}
+% \begin{macro}{l3kernel.filesize}
 %   A simple disk lookup.
 %    \begin{macrocode}
 local function filesize(name)
@@ -596,7 +583,7 @@ end)
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[dep]{l3kernel.strcmp}
+% \begin{macro}{l3kernel.strcmp}
 %   String comparison which gives the same results as \pdfTeX{}'s
 %   \tn{pdfstrcmp}, although the ordering should likely not be relied upon!
 %    \begin{macrocode}
