Extend LuaTeX emulation of \tex_filedump:N
Add an option to dump a whole file without getting the length first.

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1522,11 +1522,14 @@ end, 'global')
 %   An emulated primitive for getting a hexdump from a (partial) file.
 %   The length has a default of |0|. This is consistent with
 %   \pdfTeX, but it effectivly makes the primitive useless without an
-%   explicit |length|.
+%   explicit |length|. Therefore we allow the keyword |whole| to be used
+%   instead of a length, indicating that the whole remaining file should
+%   be read.
 %    \begin{macrocode}
 luacmd('tex_filedump:D', function()
   local offset = scan_keyword'offset' and scan_int() or nil
-  local length = scan_keyword'length' and scan_int() or 0
+  local length = scan_keyword'length' and scan_int()
+          or not scan_keyword'whole' and 0 or nil
   local data = filedump(scan_string(), offset, length)
   if data then write(data) end
 end, 'global')
