--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -107,7 +107,7 @@
 %
 % \begin{variable}[added = 2020-07-31]{\c_sys_engine_exec_str}
 %   The name of the standard executable for the current TeX engine given
-%   as a lower case string: one of
+%   as a lower case string: one of  |luatex|,
 %   |luahbtex|, |pdftex|, |eptex|, |euptex| or |xetex|.
 % \end{variable}
 %
