--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -115,7 +115,10 @@
 %   The name of the preloaded format for the current \TeX{} run given
 %   as a lower case string: one of
 %   |lualatex| (or |dvilualatex|),
-%   |pdflatex| (or |latex|), |platex|, |uplatex| or |xelatex|.
+%   |pdflatex| (or |latex|), |platex|, |uplatex| or |xelatex| for \LaTeX{},
+%   similar names for plain \TeX{} (except \pdfTeX{} in DVI mode yields
+%   |etex|), and |cont-en| for Con\TeX{}t (i.e.~the
+%   \tn{fmtname}).
 % \end{variable}
 %
 % \section{Output format}
@@ -407,17 +410,35 @@
   }
 \str_const:Nx \c_sys_engine_format_str
   {
-    \sys_if_engine_pdftex:T
-      { \int_compare:nNnT { \tex_pdfoutput:D } = { 1 } { pdf } }
-    \sys_if_engine_xetex:T  { xe  }
-    \sys_if_engine_ptex:T   { p   }
-    \sys_if_engine_uptex:T  { up  }
-    \sys_if_engine_luatex:T
+    \cs_if_exist:NTF \fmtname
       {
-        \int_compare:nNnT { \tex_pdfoutput:D } = { 0 } { dvi }
-        lua
+        \bool_lazy_or:nnTF
+          { \str_if_eq_p:Vn \fmtname { plain } }
+          { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
+          {
+            \sys_if_engine_pdftex:T
+              { \int_compare:nNnT { \tex_pdfoutput:D } = { 1 } { pdf } }
+            \sys_if_engine_xetex:T  { xe }
+            \sys_if_engine_ptex:T   { p  }
+            \sys_if_engine_uptex:T  { up }
+            \sys_if_engine_luatex:T
+              {
+                \int_compare:nNnT { \tex_pdfoutput:D } = { 0 } { dvi }
+                lua
+              }
+            \str_if_eq:VNTF \fmtname { LaTeX2e }
+              { latex }
+              {
+                \bool_lazy_and:nnT
+                  { \sys_if_engine_pdftex_p: }
+                  { \int_compare_p:nNn { \tex_pdfoutput:D } = { 0 } }
+                    { e }
+                tex
+              }
+          }
+          { \fmtname }
       }
-    latex
+      { unknown }
   }
 %    \end{macrocode}
 % \end{variable}
