--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -95,10 +95,10 @@
 %</dvips>
 %    \end{macrocode}
 %
-% \subsection{\texttt{pdfmode} backend}
+% \subsection{\LuaTeX{} and \pdfTeX{} backends}
 %
 %    \begin{macrocode}
-%<*pdfmode>
+%<*luatex|pdftex>
 %    \end{macrocode}
 %
 % \begin{variable}{\l_@@_graphics_attr_tl}
@@ -223,7 +223,7 @@
 % \begin{macro}{\@@_backend_include_eps:n}
 % \begin{variable}
 %   {\l_@@_backend_dir_str, \l_@@_backend_name_str, \l_@@_backend_ext_str}
-%   EPS graphics may be included in \texttt{pdfmode} by conversion to
+%   EPS graphics may be included in \texttt{luatex|pdftex} by conversion to
 %   PDF: this requires restricted shell escape. Modelled on the \pkg{epstopdf}
 %   \LaTeXe{} package, but simplified, conversion takes place here if we have
 %   shell access.
@@ -274,7 +274,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</pdfmode>
+%</luatex|pdftex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvipdfmx} backend}
