--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -282,7 +282,7 @@
 %     \@@_backend_stroke_rgb:n
 %   }
 %   Drawing (fill/stroke) color is handled in \texttt{(x)dvipdfmx} in the
-%   same way as \texttt{luatex|pdftex}. We use the same approach as earlier, except the
+%   same way as \LuaTeX{}/\pdfTeX{}. We use the same approach as earlier, except the
 %   color stack is not involved so the generic direct PDF operation is used.
 %   There is no worry about the nature of strokes: everything is handled
 %   automatically.
