--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -575,7 +575,7 @@
 %
 % \begin{macro}{\@@_backend_cm:nnnn}
 % \begin{macro}{\@@_backend_cm_aux:nnnn}
-%   Another split here between \texttt{luatex|pdftex} and \texttt{(x)dvipdfmx}.
+%   Another split here between \LuaTeX{}/pdfTeX{} and \texttt{(x)dvipdfmx}.
 %   In the former, we have a direct method to maintain alignment: the backend
 %   can use a matrix itself. For \texttt{(x)dvipdfmx}, we can to decompose the
 %   matrix into rotations and a scaling, then use those operations as they
