Simplify docstrip guards

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -75,11 +75,7 @@
 % \section{\pkg{l3names} implementation}
 %
 %    \begin{macrocode}
-%<*package>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-%<*tex>
+%<*package&tex>
 %    \end{macrocode}
 %
 % The prefix here is \texttt{kernel}.  A few places need |@@| to be left
@@ -115,8 +111,7 @@
 %
 % To allow extracting \enquote{just the names}, a bit of DocStrip fiddling.
 %    \begin{macrocode}
-%</tex>
-%</package>
+%</package&tex>
 %<*names|tex>
 %<*names|package>
 %    \end{macrocode}
