Multiple smaller things

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -391,23 +391,26 @@
 %   however, is reliable only if the user doesn't change
 %   \cs{tex_pdfoutput:D} before loading this code.
 %    \begin{macrocode}
-\str_const:Nx \c_sys_engine_exec_str
-  {
-    \sys_if_engine_pdftex:T { pdf }
-    \sys_if_engine_xetex:T  { xe  }
-    \sys_if_engine_ptex:T   { ep  }
-    \sys_if_engine_uptex:T  { eup }
-    \sys_if_engine_luatex:T
-      {
-        lua \lua_now:e
-          {
-            if (pcall(require, 'luaharfbuzz')) then ~
-              tex.print("hb") ~
-            end
-          }
-      }
-    tex
-  }
+\group_begin:
+  \cs_set_eq:NN \lua_now:e    \tex_directlua:D
+  \str_const:Nx \c_sys_engine_exec_str
+    {
+      \sys_if_engine_pdftex:T { pdf }
+      \sys_if_engine_xetex:T  { xe  }
+      \sys_if_engine_ptex:T   { ep  }
+      \sys_if_engine_uptex:T  { eup }
+      \sys_if_engine_luatex:T
+        {
+          lua \lua_now:e
+            {
+              if (pcall(require, 'luaharfbuzz')) then ~
+                tex.print("hb") ~
+              end
+            }
+        }
+      tex
+    }
+\group_end:
 \str_const:Nx \c_sys_engine_format_str
   {
     \cs_if_exist:NTF \fmtname
