xbox: Correct the internal box used for measuring

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -617,7 +617,7 @@
 \cs_new_protected:Npn \@@_frame:nnn #1#2#3
   {
     \group_begin:
-      \hbox_set:Nn \l__box_internal_box {#3}
+      \hbox_set:Nn \l_@@_internal_box {#3}
 %    \end{macrocode}
 %   The actual insertion is done such that the content goes in \enquote{behind}
 %   the rules. That requires a bit of shuffling so that the final box is the
@@ -627,9 +627,9 @@
       \hbox:n
         {
           \kern_horizontal:n { #1 + #2 }
-          \box_use:N \l__box_internal_box
-          \kern_horizontal:n { -\box_wd:N \l__box_internal_box - #2 - #1 }
-          \box_move_down:nn { \box_dp:N \l__box_internal_box + #2 + #1 }
+          \box_use:N \l_@@_internal_box
+          \kern_horizontal:n { -\box_wd:N \l_@@_internal_box - #2 - #1 }
+          \box_move_down:nn { \box_dp:N \l_@@_internal_box + #2 + #1 }
             {
               \vbox:n
                 {
@@ -638,14 +638,14 @@
                     {
                       \rule_vertical:n {#1}
                       \kern_horizontal:n
-                        { #2 * 2 + \box_wd:N \l__box_internal_box }
+                        { #2 * 2 + \box_wd:N \l_@@_internal_box }
                       \vbox:n
                         {
                           \kern_vertical:n
                             {
                                   #2 * 2
-                              + \box_dp:N \l__box_internal_box
-                              + \box_ht:N \l__box_internal_box
+                              + \box_dp:N \l_@@_internal_box
+                              + \box_ht:N \l_@@_internal_box
                             }
                         }
                        \rule_vertical:n {#1}
@@ -673,12 +673,12 @@
 \cs_new_protected:Npn \@@_surround:nn #1#2
   {
     \group_begin:
-      \hbox_set:Nn \l__box_internal_box {#2}
+      \hbox_set:Nn \l_@@_internal_box {#2}
       \hbox:n
         {
           \box_use:N \l__box_internal_box
-          \kern_horizontal:n { -\box_wd:N \l__box_internal_box - #1 }
-          \box_move_down:nn { \box_dp:N \l__box_internal_box }
+          \kern_horizontal:n { -\box_wd:N \l_@@_internal_box - #1 }
+          \box_move_down:nn { \box_dp:N \l_@@_internal_box }
             {
               \vbox:n
                 {
@@ -687,13 +687,13 @@
                   \hbox:n
                     {
                       \rule_vertical:n {#1}
-                      \kern_horizontal:n { \box_wd:N \l__box_internal_box }
+                      \kern_horizontal:n { \box_wd:N \l_@@_internal_box }
                       \vbox:n
                         {
                           \kern_vertical:n
                             {
-                                \box_dp:N \l__box_internal_box
-                              + \box_ht:N \l__box_internal_box
+                                \box_dp:N \l_@@_internal_box
+                              + \box_ht:N \l_@@_internal_box
                             }
                         }
                       \rule_vertical:n {#1}
