ltxtutils -> ltx.utils

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -120,9 +120,9 @@
 % As well as interfaces for \TeX{}, there are a small number of Lua functions
 % provided here.
 %
-% \begin{function}{ltxutils}
+% \begin{function}{ltx.utils}
 %   Most public interfaces provided by the module are stored within the
-%   |ltxutils| table.
+%   |ltx.utils| table.
 % \end{function}
 %
 % \begin{function}[deprecated = 2021-12-31]{l3kernel}
@@ -149,9 +149,9 @@
 %   for user input.
 % \end{function}
 %
-% \begin{function}{ltxutils.filedump, l3kernel.filedump}
+% \begin{function}{ltx.utils.filedump, l3kernel.filedump}
 %   \begin{syntax}
-%     \meta{dump}| = ltxutils.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)| \\
+%     \meta{dump}| = ltx.utils.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)| \\
 %     |l3kernel.filedump(|\meta{file}|,|\meta{offset}|,|\meta{length}|)|
 %   \end{syntax}
 %   Returns the uppercase hexadecimal representation of the content of the
@@ -161,9 +161,9 @@
 %   is read starting at the \meta{offset}.
 % \end{function}
 %
-% \begin{function}{ltxutils.filemd5sum, l3kernel.filemdfivesum}
+% \begin{function}{ltx.utils.filemd5sum, l3kernel.filemdfivesum}
 %   \begin{syntax}
-%     \meta{hash}| = ltxutils.filemd5sum(|\meta{file}|)| \\
+%     \meta{hash}| = ltx.utils.filemd5sum(|\meta{file}|)| \\
 %     |l3kernel.filemdfivesum(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the MD5 sum of the file contents read as bytes; note that
@@ -172,9 +172,9 @@
 %   nothing is returned with \emph{no error raised}.
 % \end{function}
 %
-% \begin{function}{ltxutils.filemoddate, l3kernel.filemoddate}
+% \begin{function}{ltx.utils.filemoddate, l3kernel.filemoddate}
 %   \begin{syntax}
-%     \meta{date}| = ltxutils.filemoddate(|\meta{file}|)| \\
+%     \meta{date}| = ltx.utils.filemoddate(|\meta{file}|)| \\
 %     |l3kernel.filemoddate(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the date/time of last modification of the \meta{file} in the
@@ -188,9 +188,9 @@
 %   not found, nothing is returned with \emph{no error raised}.
 % \end{function}
 %
-% \begin{function}{ltxutils.filesize, l3kernel.filesize}
+% \begin{function}{ltx.utils.filesize, l3kernel.filesize}
 %   \begin{syntax}
-%     |size = ltxutils.filesize(|\meta{file}|)| \\
+%     |size = ltx.utils.filesize(|\meta{file}|)| \\
 %     |l3kernel.filesize(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the size of the \meta{file} in bytes. If the \meta{file} is not
@@ -323,13 +323,14 @@
 % \pkg{pdftexcmds} package.
 %
 % \begin{macro}{l3kernel}
-% \begin{macro}{ltxutils}
+% \begin{macro}{ltx.utils}
 %   Create a table for the kernel's own use.
 %    \begin{macrocode}
 l3kernel = l3kernel or { }
 local l3kernel = l3kernel
-ltxutils = ltxutils or { }
-local ltxutils = ltxutils
+ltx = ltx or {utils={}}
+ltx.utils = ltx.utils or { }
+local ltxutils = ltx.utils
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -430,7 +431,7 @@ l3kernel.resettimer = resettimer
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{ltxutils.filedump}
+% \begin{macro}{ltx.utils.filedump}
 % \begin{macro}{l3kernel.filedump}
 %   Similar comments here to the next function: read the file in binary mode
 %   to avoid any line-end weirdness.
@@ -473,7 +474,7 @@ if not md5_HEX then
 end
 %    \end{macrocode}
 % \end{macro}
-% \begin{macro}{ltxutils.filemd5sum}
+% \begin{macro}{ltx.utils.filemd5sum}
 % \begin{macro}{l3kernel.filemdfivesum}
 %   Read an entire file and hash it: the hash function itself is a built-in.
 %   As Lua is byte-based there is no work needed here in terms of UTF-8
@@ -500,7 +501,7 @@ end)
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{ltxutils.filemoddate}
+% \begin{macro}{ltx.utils.filemoddate}
 % \begin{macro}{l3kernel.filemoddate}
 %   There are two cases: If the C standard library is C99 compliant,
 %   we can use |%z| to get the timezone in almost the right format.
@@ -575,7 +576,7 @@ end)
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{ltxutils.filesize}
+% \begin{macro}{ltx.utils.filesize}
 % \begin{macro}{l3kernel.filesize}
 %   A simple disk lookup.
 %    \begin{macrocode}
