--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -176,7 +176,7 @@
 \begingroup\expandafter\expandafter\expandafter\endgroup
 \expandafter\ifx\csname directlua\endcsname\relax
 \else
-  \ifnum\luatexversion<95 %
+  \ifnum\luatexversion<110 %
   \else
 %    \end{macrocode}
 %   For \LuaTeX{} we make sure the basic support is loaded:
@@ -212,6 +212,9 @@
 % The code currently requires \eTeX{} and functionality equivalent to
 % \tn{pdfstrcmp}, and also driver and Unicode character support. This is
 % available in a reasonably-wide range of engines.
+%
+% For \LuaTeX, we require at least Lua 5.3 and the |token.set_lua| function.
+% This is available at least since \LuaTeX{} 1.10.
 %    \begin{macrocode}
 \begingroup
   \def\next{\endgroup}%
@@ -224,7 +227,7 @@
       These are available in the engines\LineBreak
       - pdfTeX v1.40\LineBreak
       - XeTeX v0.99992\LineBreak
-      - LuaTeX v0.95\LineBreak
+      - LuaTeX v1.10\LineBreak
       - e-(u)pTeX mid-2012\LineBreak
       or later.\LineBreak
       \LineBreak
@@ -247,7 +250,7 @@
     \fi
     \expandafter\ifx\csname directlua\endcsname\relax
     \else
-      \ifnum\luatexversion<76 \else 1\fi
+      \ifnum\luatexversion<110 \else 1\fi
     \fi
     =0 %
       \newlinechar`\^^J %
