--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -358,7 +358,6 @@ local format     = string.format
 local gsub       = string.gsub
 local lfs_attr   = lfs.attributes
 local open       = io.open
-local os_clock   = os.clock
 local os_date    = os.date
 local setcatcode = tex.setcatcode
 local sprint     = tex.sprint
@@ -414,9 +413,10 @@ end)
 %   Simple timing set up: give the result from the system clock in scaled
 %   seconds.
 %    \begin{macrocode}
-local base_time = 0
+local os_clock   = os.clock
+local base_clock_time = 0
 local function elapsedtime()
-  local val = (os_clock() - base_time) * 65536 + 0.5
+  local val = (os_clock() - base_clock_time) * 65536 + 0.5
   if val > 2147483647 then
     val = 2147483647
   end
@@ -424,7 +424,7 @@ local function elapsedtime()
 end
 l3kernel.elapsedtime = elapsedtime
 local function resettimer()
-  base_time = os_clock()
+  base_clock_time = os_clock()
 end
 l3kernel.resettimer = resettimer
 %    \end{macrocode}
