xbox: Correct mark-up

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -810,6 +810,8 @@
 % \end{macro}
 %
 % \begin{variable}{\fboxsep, \fboxrule}
+%   Allocated by the kernel so left unchanged here.
+% \end{variable}
 %
 % \begin{macro}{\fbox}
 %   Simply frame up material: no need to do anything complex.
