xbox: Drop internal boxes after use

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -538,7 +538,7 @@
     \@@_via_internal_box:nn {#3}
       {
         \hbox_to_wd:nn {#1}
-          { \@@_hposition:nn {#2} { \hbox_unpack:N \l_@@_internal_box } }
+          { \@@_hposition:nn {#2} { \hbox_unpack_drop:N \l_@@_internal_box } }
       }
   }
 %    \end{macrocode}
@@ -576,10 +576,10 @@
     \@@_via_internal_box:nn {#4}
       {
         \hbox_set:Nn \l_@@_internal_box
-          { \box_move_up:nn {#1} { \box_use:N \l_@@_internal_box } }
+          { \box_move_up:nn {#1} { \box_use_drop:N \l_@@_internal_box } }
         \box_set_ht:Nn \l_@@_internal_box {#2}
         \box_set_dp:Nn \l_@@_internal_box {#3}
-        \box_use:N \l_@@_internal_box
+        \box_use_drop:N \l_@@_internal_box
       }
   }
 %    \end{macrocode}
@@ -664,7 +664,7 @@
       \hbox_set:Nn \l_@@_internal_box {#2}
       \hbox:n
         {
-          \box_use:N \l__box_internal_box
+          \box_use_drop:N \l__box_internal_box
           \kern_horizontal:n { -\box_wd:N \l_@@_internal_box - #1 }
           \box_move_down:nn { \box_dp:N \l_@@_internal_box }
             {
