xbox: Document the point of the module

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -52,6 +52,12 @@
 %
 % \begin{documentation}
 %
+% This experimental module explores how to re-implement core \LaTeXe{}
+% box constructs using \pkg{xparse} and \pkg{expl3} coding. As such, it provides
+% as far as possible the \LaTeXe{} \textsc{api} (except where explicitly
+% noted). Other than separation of layers, there is no significant new
+% functionality here.
+%
 % \begin{variable}{\height, \depth, \width, \totalheight}
 %   The natural dimensions of material being boxed are available within
 %   dimension calculations as \cs{height}, \cs{depth}, \cs{width} and
